Fix layout issues

--- a/src/main.css
+++ b/src/main.css
@@ -10,12 +10,18 @@
 
 header {
   max-width: 56em;
+  margin: 1em auto;
+  padding: 0 1em;
 }
 
 .page-standard-width {
   max-width: 56em;
+  margin: 0 auto;
+  padding: 0 1em;
 }
 
-.full-width {
-  max-width: 90em;
+.page-full-width {
+  max-width: 85em;
+  margin: 0 auto;
+  padding: 0 1em;
 }
